--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
     "mongodb": "^4.13.0",
-    "mongoose": "^6.8.1",
-    "nodemailer": "^6.8.0",
-    "nodemailer-sendgrid-transport": "^0.2.0"
+    "mongoose": "^6.8.1"
   }
 }
