--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "mongodb": "^4.13.0",
-    "mongoose": "^6.8.1"
+    "mongoose": "^6.8.1",
+    "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.13.0",
+    "uuid": "^9.0.0"
   }
 }
