--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^6.8.1",
     "multer": "^1.4.5-lts.1",
     "pdfkit": "^0.13.0",
+    "stripe": "^11.5.0",
     "uuid": "^9.0.0"
   }
 }
