--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "description": "node with mongoose ODM",
   "version": "1.0.0",
   "main": "app.js",
+  "engines": {
+   "node": "18.10.0"
+  },
   "scripts": {
-    "start": "nodemon app.js",
+    "start:dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jerome Jumah",
@@ -13,6 +16,7 @@
     "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
     "csurf": "^1.11.0",
@@ -20,8 +24,10 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
+    "helmet": "^6.0.1",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "pdfkit": "^0.13.0",
     "stripe": "^11.5.0",
