--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "engines": {
-    "node": "18.10.0"
+    "node": "19.6.0"
   },
   "scripts": {
     "start": "NODE_ENV=production node app.js",
@@ -19,21 +19,16 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "compression": "^1.7.4",
-    "connect-flash": "^0.1.1",
-    "connect-mongodb-session": "^3.1.1",
-    "csurf": "^1.11.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
     "pdfkit": "^0.13.0",
-    "stripe": "^11.5.0",
-    "uuid": "^9.0.0"
+    "stripe": "^11.5.0"
   }
 }
